# michi-no-eki

./: README.md
.github/workflows/: lint-and-test.yml
backend/: pyproject.toml
backend/app/: data.py  main.py
backend/fastapi/: __init__.py  testclient.py
backend/pydantic/: __init__.py
backend/tests/: test_api.py
docs/: api.md  architecture.md
frontend/: .eslintrc.json  package.json
