[project]
name = "michi-no-eki-backend"
version = "0.1.0"
description = "API server for Michi-no-Eki stamp rally app"
authors = [{ name = "Michi-no-Eki Team", email = "dev@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.3.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
